[package]
name = "points-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7", features = ["full"] }
tokio = { version = "1.41", features = ["full"] }
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "bigdecimal", "migrate", "macros"] }
dotenv = "0.15"
bigdecimal = { version = "0.3", features = ["serde"] }
actix-web = "4.4"
actix-cors = "0.7"
env_logger = "0.11"
